# scratch-link

Linux/: .gitignore  CMakeLists.txt  README.md  res.qrc
Linux/src/: Config.h.in  main.cpp
Linux/src/controller/: ScratchLinkController.cpp  ScratchLinkController.h
Linux/src/model/: ScratchLinkApplication.cpp  ScratchLinkApplication.h  ScratchLinkBluetoothClient.cpp  ScratchLinkBluetoothClient.h  ScratchLinkProtocolVersion.cpp  ScratchLinkProtocolVersion.h  ScratchLinkWebSocketServer.cpp  ScratchLinkWebSocketServer.h
Linux/src/view/: ScratchLinkTrayIcon.cpp  ScratchLinkTrayIcon.h  ScratchLinkTrayIconMenu.cpp  ScratchLinkTrayIconMenu.h  ScratchLinkView.cpp  ScratchLinkView.h
